# mav_active_3d_planning

./: README.md
active_3d_planning_app_reconstruction/cfg/experiments/: CityBuilding.yaml  experiment_visualization.rviz
active_3d_planning_app_reconstruction/cfg/planners/: exploration_planner.yaml  reconstruction_planner.yaml
active_3d_planning_app_reconstruction/launch/: gazebo.launch  mavros_posix_sitl_explore.launch  test.launch
active_3d_planning_app_reconstruction/scripts/: bounding_box_computer.py  testgui.py
active_3d_planning_app_reconstruction/src/experiments/: eval_data_node.py  eval_plotting_node.py
controller/src/: CMakeLists.txt  Controller.cpp  logfile.py  package.xml  simplecontroller.py  trajlogfile.py
